Bug 127683 - Crash when restart LO after having changing language
Summary: Crash when restart LO after having changing language
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2019-09-21 10:20 UTC by Julien Nabet
Modified: 2019-09-23 19:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (11.36 KB, text/plain)
2019-09-21 10:22 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-09-21 10:20:08 UTC
Description:
On pc Debian x86-64 with master sources updated today, I got a crash when changing language + confirming restarting LO.

Steps to Reproduce:
1. Options/Tools/
2. Languages options/Languages
3. Change UI + click OK
=> popup appears Restart now/Restart Later
4. Choose Restart now

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Julien Nabet 2019-09-21 10:22:31 UTC
Created attachment 154340 [details]
bt with debug symbols
Comment 2 Julien Nabet 2019-09-21 10:23:46 UTC
Caolán: taking a look at git history of cui/source/options/optgdlg.cxx and cui/source/options/treeopt.cxx, perhaps due to:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=94d6fa11d086187b82adf9aa596e0f334827e095 ?
Comment 3 Commit Notification 2019-09-23 18:30:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d1803d346ce4bf57d95e84563253c592caf4b3c

Resolves: tdf#127683 options dialog has a controller now

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2019-09-23 19:17:58 UTC
With master sources updated today (7d1803d346ce4bf57d95e84563253c592caf4b3c) I don't reproduce this.
Thank you for the fix!

I let you put this one to FIXED when you think it's ok for you.
Comment 5 Caolán McNamara 2019-09-23 19:34:56 UTC
Fixed in master. There might be a few more of these right now, but they will be uncovered with the current refactoring of https://gerrit.libreoffice.org/#/c/79317/