Resolves: tdf#127683 options dialog has a controller now

Change-Id: I1143bb27f524960e44aa2cdb76f063a9b93d42be